--- a/index2.html
+++ b/index2.html
@@ -3,38 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
     <title>Javascript</title>
 </head>
 <body>
     <div>
         <h1 class="Prvni">Úkol č.1</h1>
     </div>
-        <button id="first">Neklikej zde</button>
+        <button class="button" id="first">Neklikej zde</button>
 
     <div>
         <h1 class="Druhy">Úkol č.2</h1>
     </div>
-        <button id="second">Můžeš kliknout</button>
+        <button class="button" id="second">Můžeš kliknout</button>
 
     <div>
         <h1 class="Treti">Úkol č.3</h1>
     </div>
         <h1 id="text">Po kliknutí se text změní</h1>
-        <button id="change">Text se změnil</button>
+        <button class="button" id="change">Text se změnil</button>
 
     <div>
         <h1 class="Ctvrty">Úkol č.4</h1>
     </div>
-        <button id="tlačítko">Kliknutím na tlačítko se změní text</button>
+        <button class="button" id="tlačítko">Kliknutím na tlačítko se změní text</button>
         <div id="text2"></div>
 
     <div>
-        <h1>Úkol č.5</h1>
-        <p>Zadej své jméno<input id="jmeno" type="text"><button id="jmenobutton">Klikni pro pozdrav</button></p>
+        <h1 class="Paty">Úkol č.5</h1>
     </div>
+        <p>Zadej své jméno<input id="jmeno" type="text"><button class="button" id="jmenobutton">Klikni pro pozdrav</button></p>
 
+    <div>
+        <h1 class="Sedmy">Úkol č.7</h1>
+    </div>
+        <p class="mys" id="text">Text se změní po přejetím myši</p>
 
-    <script src="script.js"></script>
+    <div>
+        <h1 class="Osmy">Úkol č.8</h1>
+    </div>    
+    <button class="button" onclick="zobrazCas()">Zobraz aktuální čas</button>
+    <div id="čas"></div>
+    
+    <div>
+        <h1 class="Devaty">Úkol č.9</h1>
+    </div>
+    <button></button>
+
+    <script src="javascript.js"></script>
 </body>
 </html>
